<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post likes</string>
    <string name="description_post_reposts">Post reposts</string>
    <string name="description_post_views">Post views</string>
    <string name="description_post_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="description_post_save">Post save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_post_edit">Edit</string>
    <string name="description_pencil">Pencil</string>
    <string name="edit_message">Edit Message</string>
    <string name="description_post_edit_cancel">Сancel</string>
    <string name="chooser_repost_post">Repost post</string>
    <string name="play_video">Play video</string>
</resources>
